--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
 						<!-- القائمة -->
 							<nav id="nav">
 								<ul>
-									<li class="current"><a href="index.html">الصفحة الئيسية</a></li>
+									<li class="current"><a href="index.html">الصفحة الرئيسية</a></li>
 									<li>
 										<a href="#">الحساب</a>
 										<ul>
