--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
 						<!-- اللوقو -->
 							<div id="logo">
 								<img src="images/Special Needs Only.png" style="width:20%">
-								<span style="font-size:2vw"><b>Special Needs</b> Supplies</span>
+								<span style="font-size:2vw"><b>Special Needss</b> Supplies</span>
 							</div>
 							<hr style="color: black">
 						<!-- القائمة -->
