--- a/index.html
+++ b/index.html
@@ -198,8 +198,10 @@
 						<p> designed by <span>ali-Talal-Mohamed-yousef 2021</span></p>
 					</div>
 				</div>
-				
-		   </footer>
+							
+							</div>
+						</div>
+					</footer>
 				</div>
 
 			</div>
