--- a/SignIn.html
+++ b/SignIn.html
@@ -16,7 +16,7 @@
 
 						<!-- Logo -->
 							<div id="logo">
-								<img src="images/Special Needs Only.png" style="width:15%">
+								<img src="images/SNO.png" style="width:15%">
 								<span style="font-size:2vw"><b>Special Needs</b> Supplies</span>
 							</div>
 							<hr style="color: black">
@@ -62,7 +62,7 @@
 								<!-- Box -->
 									<section class="box">
 										<form action="index.html" method="post">
-										<label for="mail">الايميل</label>
+										<label for="mail"></label>
 										<input dir="rtl" type="email" placeholder="الايميل" id="mail" required>
 										<br>
 										<label for="pass">كلمة المرور</label>
