--- a/Itime.html
+++ b/Itime.html
@@ -15,7 +15,7 @@
 
 						<!-- Logo -->
 							<div id="logo">
-								<img src="images/Special Needs Only.png" style="width:20%">
+								<img src="images/SNO.png" style="width:20%">
 								<span style="font-size:2vw"><b>Special Needs</b> Supplies</span>
 							</div>
 							<hr style="color: black">
