--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
 
 			<!-- الواجهة -->
 				<div id="header-wrapper">
-					<header id="header" class="container">
+					<header id="header" class="container ">
 
 						<!-- اللوقو -->
 							<div id="logo">
@@ -31,7 +31,7 @@
 									<li><a href="no-sidebar.html">التواصل</a></li>
 									<li><a href="right-sidebar.html">المستلزمات المستعملة</a></li>
 									<li><a href="left-sidebar.html">المستلزمات الجديدة</a></li>
-									
+									<li><a href="cart.html">السلة</a></li>
 
 
 									<li>
